cluster/homelab/storage/rook-ceph-cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: rook-ceph-dashboard
    namespace: rook-ceph
    annotations:
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: Rook Ceph Dashboard
        gethomepage.dev/group: Storage
        gethomepage.dev/icon: ceph
        gethomepage.dev/name: Rook Ceph
        nginx.ingress.kubernetes.io/rewrite-target: /$1
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
    ingressClassName: nginx
    tls:
        -   hosts:
                - "*.sgenov.dev"
            secretName: ingress
    rules:
        -   host: rook.sgenov.dev
            http:
                paths:
                    -   pathType: Prefix
                        path: "/"
                        backend:
                          service:
                            name: rook-ceph-mgr-dashboard
                            port:
                              name: https-dashboard
